--- a/index/Home/View/Reviewgrouping/index.html
+++ b/index/Home/View/Reviewgrouping/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>分组</title>
+	<title>学生论文审阅分组</title>
 	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -145,8 +145,8 @@
 		<!-- 头部 -->
 		<div class="header">
         <div class="container">
-            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>欢迎您系统</h2>
-            <p style="color:#ddd;font-size:24px; line-height:48px">欢迎您</p>
+            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>学生论文审阅分组</h2>
+            <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/../teachingsecretary">退出</a></p>
         </div>
     </div>
 
@@ -154,11 +154,11 @@
 		<div class="container login-wrapper">
 			<div class="panel panel-default bg-transparent">
 					<div class="panel-heading bg-transparent">
-							<h3 class="panel-title">分组</h3>
+							<h3 class="panel-title">学生论文审阅分组详情</h3>
 					</div>
 					<div class="panel-body bg-transparent">
 							<table class="table table-hover">
-								<caption>分组表格布局</caption>
+								<caption>请选择学生对应审阅人</caption>
 								<thead>
 									<tr>
 										<th>学生</th>
@@ -171,6 +171,7 @@
 							</table>
 							<div class="text-center">
 								<button class="btn btn-success" id="save-btn">保存分组</button>
+								<a href="__URL__/teachergrouping"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-left"></span> 返回教师分组</button></a>
 							</div>
 							<div id="pagination" class="pagination text-center center-block">
 
